--- a/angular.json
+++ b/angular.json
@@ -116,6 +116,10 @@
               "devServerTarget": "tourHero:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {}
         }
       }
     }
